# p4api.net

./: .p4ignore  BUILD.md  CMakeLists.txt  LICENSE.txt  README.md  RELEASENOTES.txt  RunSettings.runsettings  TestSettings.testsettings  Version  bridgeunit.sln  buildit.sh  p4api.net.sln  p4api.net.vsmdi  p4apicore.net.sln  p4apinet.code-workspace  p4bridge.code-workspace  setuplibrary.bat  setuplibrary_linux.sh  setuplibrary_osx.sh
consoleApps/: ControlCTest.sln  P4DotNetConsole.sln
consoleApps/ControlCTest/: ControlCTest.cs  ControlCTest.csproj
consoleApps/P4DotNetConsole/: P4DotNetConsole.cs  P4DotNetConsole.csproj
doc/: p4api.net.chm  p4api.net.shfbproj
examples/sln-bld-cmd/: sln-bld-cmd.csproj
examples/sln-bld-gui/: sln-bld-gui.csproj
p4api.net/: BranchSpec.cs  BridgeInterfaceClasses.cs  CMakeLists.txt  CMakePresets.json  Changelist.cs  Client.cs  Connection.cs  Depot.cs  DepotFileDiff.cs  File.cs  FileMetaData.cs  FileResolveRecord.cs  FileSpec.cs  FormBase.cs  FormSpec.cs  Group.cs  Label.cs  LogFile.cs  Options.cs  P4Bridge.cs  P4BridgeLoader.cs  P4Command.cs  P4Exception.cs  P4MapApi.cs  P4Server.cs  P4Server.internal.cs  P4ServerMT.cs  PathSpec.cs  ProtectionEntry.cs  Repository.BranchSpec.cs  Repository.Changelist.cs  Repository.Client.cs  Repository.ClientMetadata.cs  Repository.Depot.cs  Repository.Group.cs  Repository.Job.cs  Repository.Label.cs  Repository.ServerLicense.cs  Repository.ServerMetaData.cs  Repository.Stream.cs  (+25 more)
p4api.net-unit-test/: ChangelistTest.cs  ClientOptionEnumTest.cs  ClientTest.cs  ConnectionTest.cs  DepotTest.cs  FileMetaDataTest.cs  FileSpecTest.cs  FormSpecTest.cs  GroupTest.cs  LabelTest.cs  MainTest.cs  NLog.config  P4CommandTest.cs  P4ServerMultiThreadingTest.cs  P4ServerTest.cs  ProtectionEntryTest.cs  RepositoryTest.BranchSpec.cs  RepositoryTest.Changelist.cs  RepositoryTest.Client.cs  RepositoryTest.ClientMetadata.cs  RepositoryTest.Depot.cs  RepositoryTest.Group.cs  RepositoryTest.Job.cs  RepositoryTest.Label.cs  RepositoryTest.ServerMetaData.cs  RepositoryTest.Stream.cs  RepositoryTest.User.cs  RepositoryTest.cs  RshTest.cs  ServerMetaDataTest.cs  StreamTest.cs  StringEnumListTest.cs  StringListTest.cs  TypeMapTest.cs  UNITTEST.md  UserTest.cs  Utilities.cs  VersionSpecTest.cs  ViewMapTest.cs  appsettings.json  (+4 more)
p4api.net.core/: p4api.net.core.csproj  p4api.net.core.nuspec  p4api.net.core.targets
p4api.net/Properties/: AssemblyInfo.cs
p4bridge/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CompilerOptions.cmake  Lock.cpp  Lock.h  P4Bridge.md  P4BridgeClient.cpp  P4BridgeClient.h  P4BridgeEnviro.cpp  P4BridgeServer.cpp  P4BridgeServer.h  P4Connection.cpp  P4Connection.h  buildall.bat  buildall_linux.sh  buildall_osx.sh  builddebug_linux.sh  builddebug_windows.bat  buildme_linux.sh  buildrelease_linux.sh  buildrelease_windows.bat  p4base.cpp  p4base.h  p4bridge(2008).rc  p4bridge-api.cpp  p4bridge.rc  p4bridge.vcxproj  p4bridge_x64.def  p4bridge_x86.def  p4map-api.cpp  stdafx.h  utils.cpp
p4bridge-unit-test/: BridgeUnitTest.md  CMakeLists.txt  CMakePresets.json  TestP4Base.cpp  TestP4Base.h  TestP4BridgeClient.cpp  TestP4BridgeClient.h  TestP4BridgeServer.cpp  TestP4BridgeServer.h  TestP4BridgeServerLogging.cpp  TestP4BridgeServerLogging.h  TestP4BridgeServerUtf8.cpp  TestP4BridgeServerUtf8.h  TestSuiteTest.cpp  TestSuiteTest.h  TestUtils.cpp  TestUtils.h  TextEncoder.cpp  UnitTestConfig.h  UnitTestFrameWork.cpp  UnitTestFrameWork.h  buildall.bat  buildall_linux.sh  buildall_osx.sh  builddebug_linux.sh  builddebug_osx.sh  gdb.notes  lldb.notes  p4bridge-unit-test.cpp  p4bridge-unit-test.rc  p4bridge-unit-test.vcxproj  stdafx.h
p4bridge-unit-test/Test References/: p4api.net.accessor
testDataDir/: readme.txt
